Added alerts and WS connection to Twitch

--- a/.env-example
+++ b/.env-example
@@ -6,6 +6,7 @@ TWITCH_CLIENT_SECRET=
 TWITCH_CHANNEL=
 TWITCH_BOT_USERNAME=
 TWITCH_BOT_AUTH_TOKEN=
+TWITCH_BOT_CHANNEL_ID=
 TIGRIS_CLIENT_ID=
 TIGRIS_CLIENT_SECRET=
 TIGRIS_PROJECT_NAME=
