--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/node": "^18.14.6",
     "@types/sinon": "^10.0.13",
     "@types/sinon-chai": "^3.2.9",
+    "@types/tmi.js": "^1.8.3",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "chai": "^4.3.7",
@@ -60,6 +61,6 @@
     "sinon-chai": "^3.7.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5"
+    "typescript": "^5.0.2"
   }
 }
